# xgrep

./: .gitignore  ARCHITECTURE.md  Cargo.toml  POST.md  README.md  bench.py  bench.sh
src/: block.rs  bloom.rs  cli.rs  discover.rs  index.rs  main.rs  matcher.rs  output.rs  query.rs  search.rs
