[package]
name = "xgrep-cli"
version = "0.1.1"
edition = "2021"
description = "Indexed search accelerator for compressed logs. Cached queries 100-1200x faster than zgrep."
license = "Apache-2.0"
repository = "https://github.com/HighpassStudio/xgrep"
homepage = "https://github.com/HighpassStudio/xgrep"
keywords = ["grep", "search", "compression", "logs", "bloom-filter"]
categories = ["command-line-utilities", "compression"]
readme = "README.md"

[[bin]]
name = "xgrep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
memchr = "2"
regex = "1"
flate2 = "1"
anyhow = "1"
termcolor = "1"
walkdir = "2"
memmap2 = "0.9"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
